# modular-metacognitive-swarm

./: .gitignore  AGENT_IDENTITY_V1_PLAN.md  METACOG_BENCHMARK_REPORT.md  METAC_SIGNAL_SHARPENING_V1_PLAN.md  README.md  WEEKLY_RESEARCH_UPDATE.md  cookbook.md  kag.md  launch_gen2.sh  main.py  pyproject.toml  reset_golden_run.sh
agent/: mediator.py
benchmark_a2a/: __init__.py  benchmark_agent.py  benchmark_server.py
executor/: m_ratio.py  mcp_server.py
hub/: app.py  chronicle.py
research_env/: benchmark.py  program.md  program_refusal_archive.md
research_env/docs/: MISSION.md  chandra_packet.json  research_chronicle.md
research_env/results/: README.md  iteration_1_results.json
research_env/vault/runs/: iteration_10_run.json  iteration_11_run.json  iteration_12_run.json  iteration_13_run.json  iteration_14_run.json  iteration_15_run.json  iteration_1_run.json  iteration_2_run.json  iteration_3_run.json  iteration_4_run.json  iteration_5_run.json  iteration_6_run.json  iteration_7_run.json  iteration_8_run.json  iteration_9_run.json
research_env/vault/tasks/: README.md  iteration_10_task.json  iteration_11_task.json  iteration_12_task.json  iteration_13_task.json  iteration_14_task.json  iteration_15_task.json  iteration_1_task.json  iteration_2_task.json  iteration_3_task.json  iteration_4_task.json  iteration_5_task.json  iteration_6_task.json  iteration_7_task.json  iteration_8_task.json  (+1 more)
sentinel/: classifier.py  mcp_server.py
shared/: hub_client.py  messenger.py  policy.py  types.py
tools/: a2a_smoke_test.py  benchmark_summary.py
(+14 files in other folders)
